# NormanPD-DataPipeline

./: .gitignore  COLLABORATORS.md  LICENSE  README.md  assignment0.py  incidents.json  main.py  setup.cfg  setup.py
assignment0/: assignment.py  main.py
resources/: DE_Compressed_video.mov  norman_pd.db  normanpd.db
tests/: __init__.py  test_assignment.py  test_assignment0.py  test_main.py
tests/data/: last_page.txt  page0.txt  page6.txt  random_page.txt
