[metadata]
name = assignment0
version = 1.0
description = Extract required fields from a PDF and populates database to run further queries.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

[aliases]
test=pytest

[tool:pytest]
norecursedirs = .*, CVS, _darcs, {arch}, *.egg, venv

[tool.isort]
profile = "black"
